# pdf-table-stripper

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: index.html
pdfstripper/: __init__.py  cli.py  extractor.py  models.py  writer.py
tests/: test_stripper.py
